--- a/electronics.html
+++ b/electronics.html
@@ -54,20 +54,63 @@
                         <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="services.html">3D Printing</a>
+                        <a href="contact.html">Contact</a>
                     </li>
-                    <li>
-                        <a href="contact.html">Laser Engraving</a>
-                    </li>
-					<li>
-                        <a href="contact.html">Woodworking</a>
-                    </li>
-					<li>
-                        <a href="contact.html">Electronics</a>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Services <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a href="laser-engraving.html">Laser Engraving</a>
+                            </li>
+                            <li>
+                                <a href="3d-printing.html">3D Printing</a>
+                            </li>
+                            <li>
+                                <a href="woodworking.html">Woodworking</a>
+                            </li>
+                            <li>
+                                <a href="electronics.html">Electronics</a>
+                            </li>
+                        </ul>
                     </li>
 					<li>
                         <a href="faq.html">FAQ</a>
                     </li>
+                    <!-- nav bar for blog and other pages
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Blog <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a href="blog-home-1.html">Blog Home 1</a>
+                            </li>
+                            <li>
+                                <a href="blog-home-2.html">Blog Home 2</a>
+                            </li>
+                            <li>
+                                <a href="blog-post.html">Blog Post</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Other Pages <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a href="full-width.html">Full Width Page</a>
+                            </li>
+                            <li>
+                                <a href="sidebar.html">Sidebar Page</a>
+                            </li>
+                            <li>
+                                <a href="faq.html">FAQ</a>
+                            </li>
+                            <li>
+                                <a href="404.html">404</a>
+                            </li>
+                            <li>
+                                <a href="pricing.html">Pricing Table</a>
+                            </li>
+                        </ul>
+                    </li> -->
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
