--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         </div>
         <!-- /.row -->
 
-        <!-- Portfolio Section -->
+        <!-- Portfolio Section
         <div class="row">
             <div class="col-lg-12">
                 <h2 class="page-header">Previous Projects</h2>
@@ -243,7 +243,7 @@
                     <img class="img-responsive img-portfolio img-hover" src="images/3dprinthub.com/bracelet.jpg" alt="">
                 </a>
             </div>
-        </div>
+        </div>  -->
         <!-- /.row -->
 
         <!-- Features Section -->
